log/build_2021-12-06_15-47-24/main/stderr.log
  File "/home/ubuntu/ws/Libero/install/main/lib/python3.8/site-packages/python_programs/main.py", line 78
    else
       ^
SyntaxError: invalid syntax

